src/test/deca/context/invalid/decl_var_02_so.deca
// Description:
//    Teste la déclaration de variable non typée.
//
// Resultats:
//    Ligne 11: L'identificateur de variable v n'est pas défini
//
// Historique:
//    cree le 13/01/2023

{
v;
}